--- a/contacts.html
+++ b/contacts.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-      rel="stylesheet"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,17 +10,12 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>Cars</title>
-
-    <script
-      src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
-      defer
-    ></script>
+    <title>Contacts</title>
     <script src="./js/index.js" defer></script>
   </head>
   <body>
     <div class="wrapper">
-      <header class="header header-main">
+      <header class="header">
         <div class="container">
           <div class="header__inner">
             <a href="#" class="logo">
@@ -54,27 +45,8 @@
       </header>
 
       <main class="main">
-        <section class="top">
-          <div class="container">
-            <h1 class="title">Leasing From D&M</h1>
-            <button class="top__btn">
-              <a href="./new car.html" class="top__link">FIND A CAR</a>
-            </button>
-          </div>
-        </section>
 
-        <div class="slider">
-          <div class="swiper">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide" style="background-image: url(img/bgc1.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(img/bgc2.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(img/bgc3.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(img/bgc4.jpg);"></div>
-
-            </div>
-            <div class="swiper-pagination"></div>
-          </div>
-        </div>
+        
       </main>
 
       <footer class="footer">
@@ -169,8 +141,7 @@
               </li>
               <li class="small__link">
                 <a href="" class="copy__links"
-                  >Do Not Sell My Personal Information</a
-                >
+                  >Do Not Sell My Personal Information</a>
               </li>
             </ul>
           </nav>
