--- a/index.html
+++ b/index.html
@@ -66,15 +66,94 @@
         <div class="slider">
           <div class="swiper">
             <div class="swiper-wrapper">
-              <div class="swiper-slide" style="background-image: url(img/bgc1.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(img/bgc2.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(img/bgc3.jpg);"></div>
-              <div class="swiper-slide" style="background-image: url(img/bgc4.jpg);"></div>
-
+              <div
+                class="swiper-slide"
+                style="background-image: url(img/bgc1.jpg)"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(img/bgc2.jpg)"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(img/bgc3.jpg)"
+              ></div>
+              <div
+                class="swiper-slide"
+                style="background-image: url(img/bgc4.jpg)"
+              ></div>
             </div>
             <div class="swiper-pagination"></div>
           </div>
         </div>
+
+        <section class="why-lease">
+          <div class="container">
+            <h2 class="title">Why Lease with D&M?</h2>
+            <ul class="why-lease__list">
+              <li class="why-lease__item">
+                <img src="./img/whyLease1.svg" alt="" class="why-lease__img" />
+                <h3 class="why-lease__title">Top Dealers</h3>
+                <p class="why-lease__text">
+                  TrueCar Certified Dealers compete for your business by
+                  providing discounted pricing on in-stock inventory.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img src="./img/whyLease2.svg" alt="" class="why-lease__img" />
+                <h3 class="why-lease__title">Discounted Pricing</h3>
+                <p class="why-lease__text">
+                  View local inventory from the comfort of home and get access
+                  to guaranteed savings on the car of your choice.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img src="./img/whyLease3.svg" alt="" class="why-lease__img" />
+                <h3 class="why-lease__title">Lower Payments</h3>
+                <p class="why-lease__text">
+                  Get discounted pricing when you shop for a car or truck using
+                  TrueCar and save on your lease payment.
+                </p>
+              </li>
+              <li class="why-lease__item">
+                <img src="./img/whyLease4.svg" alt="" class="why-lease__img" />
+                <h3 class="why-lease__title">Easy Upgrade</h3>
+                <p class="why-lease__text">
+                  Easy to upgrade to the newest vehicle model every few years if
+                  you would like to be modern and comfortable.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </section>
+
+        <section class="lease-work">
+          <div class="container">
+            <div class="lease-work__inner">
+              <h2 class="title">How Does Leasing Work?</h2>
+              <p class="lease-work__text">
+                Leasing a vehicle is essentially entering into a long term
+                rental agreement for that vehicle. Unlike a traditional car
+                purchase, you don’t actually own the vehicle. Instead, a leasing
+                company purchases the vehicle from the dealer on your behalf and
+                then you make monthly payments to the leasing company for the
+                duration of your lease. Some leases however, do provide the
+                option to purchase the vehicle at the end of the lease.
+              </p>
+              <h4 class="lease-work__title">
+                Similar to a short term car rental, there are rules that define:
+              </h4>
+              <ol class="lease-work__list">
+                <li class="lease-work__item">How much you can drive, stated as annual miles (excess miles are charged at a specified rate)</li>
+                <li class="lease-work__item">Types of damage that you may be liable for at the end of your lease</li>
+                <li class="lease-work__item">The procedures and costs when you return the vehicle at the end of your lease</li>
+              </ol>
+              <p class="lease-work__text">
+                Lease contracts are a commitment and ending them early can be difficult and expensive so it is important to consider your circumstances carefully before you decide.
+              </p>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
