--- a/contacts.html
+++ b/contacts.html
@@ -18,7 +18,7 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
               <img src="./img/logo.svg" alt="logo" />
             </a>
             <nav class="menu">
@@ -36,7 +36,7 @@
                   <a href="#" class="menu__link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__list-item">
-                  <a href="#" class="menu__link">CONTACT US</a>
+                  <a href="./index.html" class="menu__link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
@@ -45,8 +45,24 @@
       </header>
 
       <main class="main">
-
-        
+        <section class="contact__form">
+          <div class="container">
+            <h2 class="title cTitle">Contact Us</h2>
+            <p class="contact__text">
+              Feel free to contact us with questions, potencial partnerships or
+              media inquiries
+            </p>
+            <form action="" class="form">
+              <input type="text" class="input" placeholder="Name" />
+              <input type="email" class="input" placeholder="Email" />
+              <textarea
+                class="contact__area"
+                placeholder="Your text"
+              ></textarea>
+              <button class="form__btn" type="submit">SUBMIT</button>
+            </form>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
@@ -141,7 +157,8 @@
               </li>
               <li class="small__link">
                 <a href="" class="copy__links"
-                  >Do Not Sell My Personal Information</a>
+                  >Do Not Sell My Personal Information</a
+                >
               </li>
             </ul>
           </nav>
