--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <header class="header header-main">
         <div class="container">
           <div class="header__inner">
-            <a href="#" class="logo">
+            <a href="./index.html" class="logo">
               <img src="./img/logo.svg" alt="logo" />
             </a>
             <nav class="menu">
@@ -45,7 +45,7 @@
                   <a href="#" class="menu__link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__list-item">
-                  <a href="#" class="menu__link">CONTACT US</a>
+                  <a href="./contacts.html" class="menu__link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
@@ -144,14 +144,71 @@
                 Similar to a short term car rental, there are rules that define:
               </h4>
               <ol class="lease-work__list">
-                <li class="lease-work__item">How much you can drive, stated as annual miles (excess miles are charged at a specified rate)</li>
-                <li class="lease-work__item">Types of damage that you may be liable for at the end of your lease</li>
-                <li class="lease-work__item">The procedures and costs when you return the vehicle at the end of your lease</li>
+                <li class="lease-work__item">
+                  How much you can drive, stated as annual miles (excess miles
+                  are charged at a specified rate)
+                </li>
+                <li class="lease-work__item">
+                  Types of damage that you may be liable for at the end of your
+                  lease
+                </li>
+                <li class="lease-work__item">
+                  The procedures and costs when you return the vehicle at the
+                  end of your lease
+                </li>
               </ol>
               <p class="lease-work__text">
-                Lease contracts are a commitment and ending them early can be difficult and expensive so it is important to consider your circumstances carefully before you decide.
+                Lease contracts are a commitment and ending them early can be
+                difficult and expensive so it is important to consider your
+                circumstances carefully before you decide.
               </p>
             </div>
+          </div>
+        </section>
+
+        <section class="video">
+          <div class="container">
+            <h2 class="title tVideo">WELCOME TO D&M LEASING</h2>
+            <p class="video__text">Find out how easy it is to lease from D&M</p>
+            <iframe
+              class="video__content"
+              width="1000"
+              height="500"
+              src="https://www.youtube.com/embed/o6WxMnnBmew?si=PK6Typ_eSiUShJr1"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+              allowfullscreen
+            ></iframe>
+          </div>
+        </section>
+
+        <section class="important">
+          <div class="container">
+            <h2 class="title tImportant">Important Things to Consider</h2>
+            <p class="important__text1">
+              Depending on your circumstances and what is important to you, a
+              lease could be a great option for your next vehicle. Below are
+              some important factors that may influence your decision.
+            </p>
+            <ul class="important__list">
+              <li class="important__item">
+                <img src="./img/important1.jpg" alt="" class="important__img" />
+                <p class="important__text">Monthly payments on leases are generally 20% - 30% cheaper than loans</p>
+              </li>
+              <li class="important__item">
+                <img src="./img/important2.jpg" alt="" class="important__img" />
+                <p class="important__text">You may be eligible for a tax break if you use the leased vehicle for business purposes</p>
+              </li>
+              <li class="important__item">
+                <img src="./img/important3.jpg" alt="" class="important__img" />
+                <p class="important__text">Easy to upgrade to the newest vehicle model every few years</p>
+              </li>
+              <li class="important__item">
+                <img src="./img/important4.jpg" alt="" class="important__img" />
+                <p class="important__text">There are often fees charged if you drive more than your lease's mileage allowance</p>
+              </li>
+            </ul>
           </div>
         </section>
       </main>
