--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__list-item">
-                  <a href="#" class="menu__link">NEW CARS</a>
+                  <a href="new car.html" class="menu__link">NEW CARS</a>
                 </li>
                 <li class="menu__list-item">
                   <a href="#" class="menu__link">PRE-OWNED CARS</a>
@@ -45,7 +45,7 @@
                   <a href="#" class="menu__link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__list-item">
-                  <a href="./contacts.html" class="menu__link">CONTACT US</a>
+                  <a href="contacts.html" class="menu__link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
