--- a/new car.html
+++ b/new car.html
@@ -24,7 +24,7 @@
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__list-item">
-                  <a href="#" class="menu__link">NEW CARS</a>
+                  <a href="#" class="menu__link menu__link--active">NEW CARS</a>
                 </li>
                 <li class="menu__list-item">
                   <a href="#" class="menu__link">PRE-OWNED CARS</a>
@@ -36,7 +36,7 @@
                   <a href="#" class="menu__link">LEASE VS BUY</a>
                 </li>
                 <li class="menu__list-item">
-                  <a href="#" class="menu__link">CONTACT US</a>
+                  <a href="contacts.html" class="menu__link">CONTACT US</a>
                 </li>
               </ul>
             </nav>
@@ -46,7 +46,29 @@
 
       <main class="main">
 
-        
+        <section class="blog">
+          <div class="container">
+            <div class="blog__items">
+              <div class="blog__item">
+                <img src="img/blog1.jpg" alt="" class="blog__img" />
+                <h4 class="blog__title">
+                  An easier way to buy your next Toyota
+                </h4>
+                <a href="" class="blog__link">MORE</a>
+              </div>
+              <div class="blog__item">
+                <img src="img/blog2.jpg" alt="" class="blog__img" />
+                <h4 class="blog__title">A Guide to Road-Tripping With Pets</h4>
+                <a href="" class="blog__link">MORE</a>
+              </div>
+            </div>
+            <div class="blog__btn">
+              <button class="blog__btn2">
+                <a href="#"> SHOW MORE</a>
+              </button>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer class="footer">
