--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,8 +14,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>Contacts</title>
+    
+    <script
+    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
+    defer
+    ></script>
     <script src="./js/index.js" defer></script>
+    <title>Contacts</title>
   </head>
   <body>
     <div class="wrapper">
