--- a/new car.html
+++ b/new car.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,8 +14,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
-    <title>New car</title>
+    
+    <script
+    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
+    defer
+    ></script>
     <script src="./js/index.js" defer></script>
+    <title>New car</title>
   </head>
   <body>
     <div class="wrapper">
@@ -45,6 +54,101 @@
       </header>
 
       <main class="main">
+        <section class="choose">
+          <div class="container">
+            <h2 class="title">Choose your car</h2>
+            <div class="tabs">
+              <div class="tabs__btn">
+                <button class="tabs__btn--item activeTabs" data-button="content-1">
+                  Car and Minivan
+                </button>
+                <button class="tabs__btn--item" data-button="content-2">
+                  Trucks
+                </button>
+                <button class="tabs__btn--item" data-button="content-3">
+                  Crossovers & SUVs
+                </button>
+                <button class="tabs__btn--item" data-button="content-4">
+                  Electrified
+                </button>
+              </div>
+              <div class="tabs__content">
+                <div class="tab__content--item activeTabs" id="content-1">
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car2.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Ford Explorer 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$1,013/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car3.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Santa Fe 20233</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$$739/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car4.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">KIA Niro 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$554/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                </div>
+                <div class="tab__content--item" id="content-2">
+
+                </div>
+                <div class="tab__content--item" id="content-3">
+
+                </div>
+                <div class="tab__content--item" id="content-4">
+
+                </div>
+              </div>
+            </div>
+            <div class="blog__btn">
+              <button class="blog__btn2">
+                <a href="new car.html"> SHOW MORE</a>
+              </button>
+            </div>
+          </div>
+        </section>
 
         <section class="blog">
           <div class="container">
@@ -163,7 +267,8 @@
               </li>
               <li class="small__link">
                 <a href="" class="copy__links"
-                  >Do Not Sell My Personal Information</a>
+                  >Do Not Sell My Personal Information</a
+                >
               </li>
             </ul>
           </nav>
