--- a/index.html
+++ b/index.html
@@ -27,10 +27,15 @@
       <header class="header header-main">
         <div class="container">
           <div class="header__inner">
-            <a href="./index.html" class="logo">
+            <a href="index.html" class="logo">
               <img src="./img/logo.svg" alt="logo" />
             </a>
             <nav class="menu">
+              <button class="menu__btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
               <ul class="menu__list">
                 <li class="menu__list-item">
                   <a href="new car.html" class="menu__link">NEW CARS</a>
