--- a/new car.html
+++ b/new car.html
@@ -14,10 +14,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./style/style.css" />
-    
+
     <script
-    src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
-    defer
+      src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"
+      defer
     ></script>
     <script src="./js/index.js" defer></script>
     <title>New car</title>
@@ -27,7 +27,7 @@
       <header class="header">
         <div class="container">
           <div class="header__inner">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
               <img src="./img/logo.svg" alt="logo" />
             </a>
             <nav class="menu">
@@ -59,7 +59,10 @@
             <h2 class="title">Choose your car</h2>
             <div class="tabs">
               <div class="tabs__btn">
-                <button class="tabs__btn--item activeTabs" data-button="content-1">
+                <button
+                  class="tabs__btn--item activeTabs"
+                  data-button="content-1"
+                >
                   Car and Minivan
                 </button>
                 <button class="tabs__btn--item" data-button="content-2">
@@ -132,13 +135,91 @@
                   </div>
                 </div>
                 <div class="tab__content--item" id="content-2">
-
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car1.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Toyota Crown 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$ 650/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
                 </div>
                 <div class="tab__content--item" id="content-3">
-
+                  <div class="card">
+                    <img src="img/car2.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Ford Explorer 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$1,013/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car2.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Ford Explorer 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$1,013/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car2.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Ford Explorer 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$1,013/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
+                  <div class="card">
+                    <img src="img/car2.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">Ford Explorer 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$1,013/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
                 </div>
                 <div class="tab__content--item" id="content-4">
-
+                  <div class="card">
+                    <img src="img/car4.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">KIA Niro 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$554/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div><div class="card">
+                    <img src="img/car4.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">KIA Niro 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$554/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div><div class="card">
+                    <img src="img/car4.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">KIA Niro 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$554/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div><div class="card">
+                    <img src="img/car4.jpg" alt="" class="card__img" />
+                    <h4 class="card__title">KIA Niro 2023</h4>
+                    <p class="card__text">starting from $ 39900</p>
+                    <p class="card__price">$554/mo</p>
+                    <a href="" class="card__link">see details</a>
+                  </div>
                 </div>
               </div>
             </div>
