--- a/new car.html
+++ b/new car.html
@@ -31,6 +31,11 @@
               <img src="./img/logo.svg" alt="logo" />
             </a>
             <nav class="menu">
+              <button class="menu__btn">
+                <span></span>
+                <span></span>
+                <span></span>
+              </button>
               <ul class="menu__list">
                 <li class="menu__list-item">
                   <a href="#" class="menu__link menu__link--active">NEW CARS</a>
